updated resume and made links at bottom fixed so they don't get cut off on some mobile phones

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ html {
 }
 
 #linksection {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	right: 0;
 }
